# obs-backgroundremoval

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  HANDOVER.md  PLAN.md  PROGRESS.md  README.md  vcpkg-configuration.json
.github/: copilot-instructions.md
.github/workflows/: build-project.yaml
cmake/: DownloadOnnxruntime.cmake
data/locale/: en-US.ini
docs/: RACE-CONDITIONS.md
src/: FilterData.h  background-filter.cpp  consts.h  enhance-filter.cpp
src/models/: Model.h  ModelPPHumanSeg.h  ModelRVM.h  ModelSINET.h  ModelTCMonoDepth.h
src/obs-utils/: obs-utils.cpp
src/ort-utils/: async-inference-queue.cpp  async-inference-queue.h  cuda-preprocess.cu  cuda-preprocess.h  gpu-info.cpp  gpu-info.h  ort-session-utils.cpp  profiler.h
